--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,11 +1,31 @@
 .project-card {
   width: 100%;
-  border: 1px solid black;
-  box-shadow: 0px 0px 5px gray;
 }
 
 .project-card img {
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+
+.project-card h3 {
+  margin: 0;
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.project-card a {
+  text-decoration: none;
+  color: #63717b;
+  padding: 1rem;
+  display: block;
+  text-align: center;
+  background-color: #a7bbbe;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.project-card a:hover {
+  background-color: #a7bbbe;
 }
