--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -12,20 +12,20 @@
   margin: 0;
   padding: 1rem;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: var(--font-weight-heavy);
 }
 
 .project-card a {
   text-decoration: none;
-  color: #63717b;
+  color: var(--color-dark-shades);
   padding: 1rem;
   display: block;
   text-align: center;
-  background-color: #a7bbbe;
+  background-color: var(--color-light-accent-1);
   border-radius: 5px;
   transition: 0.3s;
 }
 
 .project-card a:hover {
-  background-color: #a7bbbe;
+  background-color: var(--color-light-accent-2);
 }
