pledge creation form clearing, still need to work on page re-render

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -10,3 +10,9 @@ body {
   justify-content: space-around;
   background-color: var(--color-main);
 }
+
+#pledge-list {
+  display: flexbox;
+  flex-direction: column;
+  background-color: var(--color-main);
+}
