--- a/src/components/Nav/NavBar.css
+++ b/src/components/Nav/NavBar.css
@@ -1,30 +1,29 @@
 nav {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   padding: 1rem 2rem;
-  background-color: var(--color-dark-shades);
+  background-color: var(--color-light-shades);
   box-shadow: var(--box-shadow);
   margin-bottom: 25px;
 }
 
 ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
   gap: 1rem;
 }
 
 li {
+  margin-top: 0.5rem;
   list-style: none;
 }
 
 li a {
   text-decoration: none;
-  color: var(--color-light-accent-2);
-  font-size: 1.2rem;
+  color: var(--color-dark-shades);
+  font-size: 1.3rem;
   font-weight: var(--font-weight-heavy);
 }
 
 li a:hover {
-  color: var(--color-light-shades);
+  color: var(--color-light-accent-1);
 }
