--- a/src/components/Projects/ProjectCard.css
+++ b/src/components/Projects/ProjectCard.css
@@ -1,10 +1,10 @@
 .project-card {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .project-card img {
   width: 100%;
-  height: 300px;
   object-fit: cover;
 }
 
@@ -21,11 +21,12 @@
   padding: 1rem;
   display: block;
   text-align: center;
-  background-color: var(--color-light-accent-1);
+  background-color: var(--color-light-shades);
   border-radius: 5px;
   transition: 0.3s;
+  height: 100%;
 }
 
 .project-card a:hover {
-  background-color: var(--color-light-accent-2);
+  background-color: var(--color-light-accent-1);
 }
