--- a/src/variables.css
+++ b/src/variables.css
@@ -4,15 +4,16 @@
   --base-font-size: 16px;
   --box-shadow: 0 2px 4px #0000001a;
   --line-height: 1.5;
+  --font-weight-extra-heavy: 550;
   --font-weight-heavy: 500;
   --font-weight-light: 300;
   --font-style: normal;
-  --color-main: #879aac;
-  --color-dark-accent-1: #746f67;
-  --color-dark-accent-2: #373e4a;
-  --color-light-accent-1: #8e8eb6;
+  --color-main: #76757f;
+  --color-dark-accent-1: #665b57;
+  --color-dark-accent-2: #754b48;
+  --color-light-accent-1: #b08f82;
   --color-light-accent-2: #b6b6d8;
-  --color-dark-shades: #373e4a;
-  --color-light-shades: #f8f7f6;
+  --color-dark-shades: #28272b;
+  --color-light-shades: #f1e3d9;
   --color-link-underline: underline;
 }
