--- a/src/components/Projects/ProjectPage.css
+++ b/src/components/Projects/ProjectPage.css
@@ -1,4 +1,86 @@
 .projectPage {
+  background-color: var(--color-main);
+  padding: 25px;
+}
+
+.projectPanel {
+  display: grid;
+  grid-template-columns: 25% 50% 15%;
+  justify-content: start;
+  margin: 10px 0px;
+}
+
+.projectPanel img {
+  justify-self: center;
+  padding: 25px;
+  background-color: var(--color-light-shades);
+}
+
+.projectPanel p {
+  width: 80%;
+  align-self: center;
+  justify-self: center;
+}
+
+.fundingProgress {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.fundingProgress p {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.projectStats {
+  margin-top: 25px;
+}
+
+.projectPledgeList {
   background-color: var(--color-light-shades);
   padding: 25px;
+}
+
+.projectPledgeList h3 {
+  margin-bottom: 10px;
+}
+
+.pledgeListing {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 1rem;
+}
+
+.pledgeListing img {
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.pledgeListing ul {
+  list-style: none;
+}
+
+.pledgeListing li {
+  text-align: start;
+  padding: 15px;
+  border: 1px solid var(--color-main);
+  width: 80%;
+}
+
+.pledgeListing li p {
+  margin: 15px 0px;
+}
+
+.pledgeDetails {
+  border: 1px solid var(--color-main);
+}
+
+.pledgeListing li a {
+  text-decoration: none;
+}
+
+.pledgedAgo {
+  font-size: var(--small-font-size);
 }
