--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -2,23 +2,25 @@
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+
   padding: 50px;
-  margin: 10px;
-  border: 1px solid #ccc;
+  margin: 1em;
+  border: 3px solid var(--color-light-shades);
   border-radius: 4px;
-  box-shadow: var(--box-shadow);
 }
 
 label {
   color: var(--color-dark-shades);
-  font-weight: bold;
+  font-weight: var(--font-weight-heavy);
+  line-height: 2;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-  width: 100%;
+  height: 100%;
+  width: 95%;
   padding: 10px;
   margin: 10px;
   border: 1px solid #ccc;
@@ -26,12 +28,15 @@ input[type="password"] {
 }
 
 button {
+  margin-top: 25px;
   padding: 10px 20px;
-  background-color: var(--color-light-accent-2);
+  background-color: var(--color-light-accent-1);
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  width: 10em;
+  align-self: center;
 }
 
 button:hover {
