--- a/src/components/Projects/ProjectPage.css
+++ b/src/components/Projects/ProjectPage.css
@@ -1,31 +1,40 @@
 .projectPage {
   background-color: var(--color-main);
   padding: 25px;
+  width: 75%;
+  margin: auto;
+  text-align: center;
 }
 
 .projectPanel {
-  display: grid;
-  grid-template-columns: 25% 50% 15%;
-  justify-content: start;
-  margin: 10px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 25px 0px;
+  padding: 5px;
+  border: 1px solid var(--color-light-shades);
+  background-color: var(--color-light-shades);
 }
 
 .projectPanel img {
-  justify-self: center;
-  padding: 25px;
-  background-color: var(--color-light-shades);
+  width: 80%;
+  align-self: center;
+  margin: 25px 0px;
 }
 
 .projectPanel p {
   width: 80%;
   align-self: center;
-  justify-self: center;
+  text-align: center;
+  line-height: 2;
+  margin: 25px 0px;
 }
 
 .fundingProgress {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 25px 0px;
 }
 
 .fundingProgress p {
@@ -35,15 +44,17 @@
 
 .projectStats {
   margin-top: 25px;
+  font-size: var(--small-font-size);
 }
 
 .projectPledgeList {
   background-color: var(--color-light-shades);
   padding: 25px;
+  margin-bottom: 25px;
 }
 
 .projectPledgeList h3 {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
 .pledgeListing {
@@ -52,10 +63,16 @@
   gap: 1rem;
 }
 
-.pledgeListing img {
-  height: auto;
-  max-width: 100%;
-  object-fit: cover;
+.pledgeListing li:nth-child(odd) {
+  background-color: var(--color-light-accent-2);
+}
+.pledgeListing li:nth-child(even) {
+  background-color: var(--color-light-shades);
+}
+
+.backgroundImage {
+  background: url(../src/assets/river-pebbles.jpg);
+  background-repeat: repeat;
 }
 
 .pledgeListing ul {
@@ -83,4 +100,7 @@
 
 .pledgedAgo {
   font-size: var(--small-font-size);
+}
+
+@media (max-width: 400px) {
 }
