--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,9 +1,9 @@
 body {
-  background-color: var(--color-main);
+  background-color: var(--color-main-background);
   font-family: var(--main-font);
 }
 
-#project-list {
+#project-card-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 10px;
@@ -11,7 +11,7 @@ body {
 }
 
 @media (max-width: 400px) {
-  #project-list {
+  #project-card-container {
     display: block;
   }
 }
