cleaning up redundant html elements

--- a/src/components/Projects/Paginate.css
+++ b/src/components/Projects/Paginate.css
@@ -1,46 +1,34 @@
-.pagination-container {
-    display: flex;
-    justify-content: center;
-    margin-top:2rem;
-    flex-direction: column;
-}
+/* on projectcards.jsx */
 
-.pagination {
+.paginate-section {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+.pagination-list {
     list-style-type: none;
     display: flex;
     gap: 0.5rem;
+    margin: auto;
   }
  
-.page-number {
+.pagination-list-item {
     cursor: pointer;
+    background-color: var(--color-primary-dark-1);
+    color: var(--color-light-1);
     padding: 0.3rem 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: var(--border-button);
+    border-radius: var(--border-radius-button);
 }
 
-.page-number:hover {
-background-color: #f0f0f0;
+.pagination-list-item:hover {
+background-color: var(--color-primary-dark-2);
 }
 
-.page-number.active {
-background-color: #007bff;
-color: #fff;
+.pagination-list-item.active {
+background-color: var(--color-primary-light-4);
 }
 
-/* on projectcards.jsx */
 
-.paginate-section{
-    display: flex;
-  flex-direction: column;
-    gap: 8px;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5rem;
-  }
-
-.paginate-numbers{
-    display:flex;
-    margin-bottom: 10rem;
-  }
-  
 
