--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@
   --font-weight-normal: 400;
   --font-style: normal;
 
+  --border-container: 1px solid var(--color-light-2);
+  --border-button: 1px solid var(--color-light-4);
   --border-radius-container: 5px;
-  --border-radius-button: 15px;
+  --border-radius-button: 10px;
 
   --color-main-background: #F3F3F3;
   --color-light-1: #F3F3F3;
