--- a/src/components/Projects/ProjectCard.css
+++ b/src/components/Projects/ProjectCard.css
@@ -1,27 +1,24 @@
 @import '../../index.css';
 
-
 .project-card {
   display: flex;
   flex-direction: column;
-
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  margin: 10px 10px;
+  width: 350px;
 }
 
-.project-image img, .project-image-placeholder img {
-  object-fit: fill;
-  width: 100%;
+.project-image img {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;  
 }
 
-.project-card-header a {
-  text-decoration: none;
-  color: var(--color-dark-shades);
-  padding: 1.5rem;
-  display: block;
+.project-card-header {
+  padding: 10px;
+  margin: 0px 10px;
   text-align: center;
-  border-radius: var(--border-radius-container);
-  transition: 0.3s;
-}
 
-.project-card-header a:hover {
-  background-color: var(--color-light-2);
 }
