--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,16 +3,13 @@ body {
   font-family: var(--main-font);
 }
 
-.featured-projects-section h2 {
-  max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1rem;
+.featured-projects-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
-@media (max-width: 400px) {
-  #project-card-container {
-    display: block;
-  }
-}
+
+
