--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,2 +1,56 @@
 
+.footer {
+    background-color: var(--color-dark-2);
+}
 
+.footer-container {
+    height: 95vh;
+    display: flex;
+    min-width: 400px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 0 25px 25px 25px;
+
+}
+
+h2 span {
+    color: var(--color-primary-light-4)
+}
+
+.footer-container h2,
+.footer-container h4,
+.footer-container a,  
+.footer-container p {
+    color:  var(--color-light-3);
+}
+
+.legals-list, .footer-container a {
+    padding-inline-start: 5px;
+}
+
+.legals-list li {
+    list-style-type: none;
+    padding-inline-start: 0px;
+  
+}
+
+.footer-container a {
+    font-size: var(--small-font-size);
+}
+
+.icons-container {
+    display: flex;
+    gap: 5px;
+    padding: 15px 10px;
+}
+
+.icons-container svg {
+    fill: var(--color-primary-light-4);
+}
+
+.disclaimer, .crowdharbour-info {
+    font-size: var(--extra-small-font-size);
+}
