--- a/src/components/Projects/ProjectCard.css
+++ b/src/components/Projects/ProjectCard.css
@@ -13,7 +13,8 @@
 .project-image img {
   height: 200px;
   width: 200px;
-  object-fit: cover;  
+  object-fit: cover;
+  border-radius: var(--border-radius-container);  
 }
 
 .project-card-header {
