--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --base-font-size: 16px;
   --link-font-size: 1rem;
   --small-font-size: 0.875rem;
+  --extra-small-font-size: 0.75rem;
   --box-shadow: 0 2px 4px #0000001a;
   --line-height: 1.5;
   --font-weight-extra-heavy: 550;
@@ -13,7 +14,7 @@
 
   --border-container: 1px solid var(--color-light-2);
   --border-button: 1px solid var(--color-light-4);
-  --border-radius-container: 5px;
+  --border-radius-container: 10px;
   --border-radius-button: 10px;
 
   --color-main-background: #F3F3F3;
@@ -80,11 +81,13 @@ p, h1, h2, h3, h4 {
 h1 {
   font-size: 2.25em;
   color: var(--color-primary-dark-4);
+  margin: 10px 0px;
 }
 
 h2 {
   font-size: 1.625em;
   color: var(--color-primary-dark-4);
+  margin: 10px 0px;
 }
 
 h3 {
