--- a/src/components/Projects/ProjectCards.css
+++ b/src/components/Projects/ProjectCards.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: pink;
+    background-color: var(--color-light-1);
   }
   
 
