--- a/src/components/Home/HeroBanner.css
+++ b/src/components/Home/HeroBanner.css
@@ -1,5 +1,13 @@
+.hero-banner-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    background-color: var(--color-light-1);  
+}
+
 .hero-banner-text {
-    background-color: pink;
+    background-color: var(--color-light-1);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -15,4 +23,15 @@
 
 .hero-banner-text p {
     margin: 5px 0px;
+}
+
+
+.hero-banner-container a {
+    cursor: pointer;
+    background-color: var(--color-primary-dark-1);
+    color: var(--color-light-1);
+    padding: 0.3rem 0.5rem;
+    border: var(--border-button);
+    border-radius: var(--border-radius-button);
+    margin-bottom: 25px;  
 }
