--- a/src/components/Home/HeroBanner.css
+++ b/src/components/Home/HeroBanner.css
@@ -28,9 +28,9 @@
 
 .hero-banner-container a {
     cursor: pointer;
-    background-color: var(--color-primary-dark-1);
+    background-color: var(--color-dark-2);
     color: var(--color-light-1);
-    padding: 0.3rem 0.5rem;
+    padding: 0.4rem 0.6rem;
     border: var(--border-button);
     border-radius: var(--border-radius-button);
     margin-bottom: 25px;  
