--- a/src/components/Nav/NavBar.css
+++ b/src/components/Nav/NavBar.css
@@ -1,7 +1,7 @@
 
 .topNav {
   overflow: hidden;
-  background-color: var(--color-light-1);
+  background-color: var(--color-dark-2);
   position: relative;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .topNav a {
-  color: var(--color-warm-dark-2);
+  color: var(--color-light-1);
   padding: 14px 16px;
   text-decoration: none;
   font-size: 26px;
@@ -43,8 +43,8 @@
 
 .topNav a.icon {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 7px;
+  top: 7px;
 }
 
 .topNav a.icon:hover {
@@ -66,6 +66,7 @@
       display: flex;
       flex: 1;
       justify-content: flex-end;
+      align-items: center;
   }
 
   .hamburgerIcon {
@@ -80,12 +81,18 @@
 
 @media (min-width: 768px) {
   .topNav a {
-      font-size: 14px;
+      font-size: 26px;
   }
 }
 
 @media (min-width: 1024px) {
   .topNav a {
-      font-size: 17px;
+      font-size: 32px;
+  }
+
+  .nav-Links a {
+    font-size: 20px;
   }
 }
+
+
