responsive for mobile and desktop

--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -3,15 +3,21 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
   padding: 50px;
   margin: 1em;
-  border: 3px solid var(--color-light-shades);
+  border: 3px solid var(--color-light-3);
   border-radius: 4px;
 }
 
+.formDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 label {
-  color: var(--color-dark-shades);
+  color: var(--color-warm-dark-2);
   font-weight: var(--font-weight-heavy);
   line-height: 2;
 }
@@ -19,28 +25,26 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-  height: 100%;
   width: 95%;
   padding: 10px;
   margin: 10px;
-  border: 1px solid #ccc;
+  border: var(--border-container);
   border-radius: 4px;
 }
 
 button {
   margin-top: 25px;
-  padding: 10px 20px;
-  background-color: var(--color-light-accent-1);
-  color: #fff;
-  border: none;
-  border-radius: 4px;
+  padding: 0.4rem 0.6rem;
+  background-color: var(--color-dark-2);
+  color: var(--color-light-1);
+  border: var(--border-button);
+  border-radius: var(--border-radius-button);
   cursor: pointer;
-  width: 10em;
   align-self: center;
 }
 
 button:hover {
-  background-color: var(--color-light-accent-1);
+  background-color: var(--color-light-2);
 }
 
 @media (min-width: 50rem) {
@@ -49,15 +53,13 @@ button:hover {
     flex-direction: column;
   }
 
-  .signupForm {
-    display: flex;
-    flex-direction: column;
+  form {
+    min-width: 45rem;
+    align-self: center;
   }
 
-  form {
-    display: flex;
-    flex-direction: column;
-    min-width: 45rem;
+  .signupForm {
+    min-width: 25rem;
     align-self: center;
   }
 }
