--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,15 @@ a {
 .boldText {
   font-weight: 600;
 }
+
+button[type="submit"] {
+  margin-top: 25px;
+  background-color: var(--color-dark-2);
+  color: var(--color-light-1);
+  padding: 0.4rem 0.6rem;
+  border: var(--border-button);
+  border-radius: var(--border-radius-button);
+  cursor: pointer;
+  width: 10em;
+  align-self: center;
+}
