--- a/src/components/Nav/NavBar.css
+++ b/src/components/Nav/NavBar.css
@@ -20,7 +20,8 @@
 
 .topNav a {
   color: var(--color-light-1);
-  padding: 14px 16px;
+  padding: 14px 10px;
+  margin-right: 10px;
   text-decoration: none;
   font-size: 26px;
   font-weight: var(--font-weight-heavy);
@@ -67,6 +68,7 @@
       flex: 1;
       justify-content: flex-end;
       align-items: center;
+      text-align: center;
   }
 
   .hamburgerIcon {
@@ -82,6 +84,9 @@
 @media (min-width: 768px) {
   .topNav a {
       font-size: 26px;
+  }
+  .nav-Links a {
+    font-size: 14px;
   }
 }
 
