additional content added to sign up form and image tweaking

--- a/src/components/Login/SignUpForm.css
+++ b/src/components/Login/SignUpForm.css
@@ -8,3 +8,10 @@ label span {
     font-size: var(--extra-small-font-size);
 }
 
+p {
+    margin-top: 25px;
+}
+
+p a {
+    text-decoration: underline;
+}
