--- a/src/components/Projects/ProjectPage.css
+++ b/src/components/Projects/ProjectPage.css
@@ -32,6 +32,7 @@
 
 .projectPage h3 {
   margin-top: 25px;
+  text-align: center;
 }
 
 .project-summary p {
@@ -114,4 +115,8 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+
+.rock-image {
+  margin-top: 25px;
 }
