--- a/src/components/Pledges/PledgeCreationForm.css
+++ b/src/components/Pledges/PledgeCreationForm.css
@@ -27,7 +27,7 @@ input[type="checkbox"] {
 }
 
 input::placeholder {
-  font-size: var(--extra-small-font-size);
+  font-size: var(--small-font-size);
 }
 
 #pledgeAnonymously {
