--- a/src/components/Projects/ProjectCreationForm.css
+++ b/src/components/Projects/ProjectCreationForm.css
@@ -1,4 +1,4 @@
-form {
+.project-creation-form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -12,8 +12,10 @@ select {
   color: var(--color-dark-2);
 }
 
+
 select option {
   color: var(--color-dark-2);
+  font-size: var(--small-font-size);
   cursor: pointer;
   margin: 4px 0px;
 }
@@ -25,10 +27,12 @@ select {
   width: 95%;
   padding: 10px;
   margin: 10px;
+  border: var(--border-container);
+  border-radius: 4px;
 }
 
 
-@media (min-width: 50rem) {
+@media (min-width: 800px) {
   .projectCreationForm {
     display: flex;
     flex-direction: column;
